send-modal width make more fixed upon estimate & static more-info class & auto overflow-y description token-detail

--- a/src/scss/components/modal/modal.scss
+++ b/src/scss/components/modal/modal.scss
@@ -5,7 +5,7 @@
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   background-color: #0006;
   justify-content: flex-start;
   align-items: center;
@@ -18,14 +18,12 @@
     width: auto;
     height: auto;
     max-width: 85vw;
-    max-height: 75vh;
     border-radius: v.$border-radius-hard;
     padding: 2rem;
     min-width: 38rem;
     position: relative;
     margin: 5rem 0 0 0;
     overflow-x: hidden;
-    overflow-y: auto;
 
     & .close {
       top: -0.65rem;
